# tree-sitter-epics

./: .gitignore  LICENSE  README.md  flake.nix  package.json
common/: common_grammar.js  common_msi.js
contrib/: tree-sitter-epics-nice-print.sh
epics-cmd/: Cargo.toml  binding.gyp  grammar.js
epics-cmd/bindings/node/: binding.cc  index.js
epics-cmd/bindings/rust/: lib.rs
epics-cmd/src/: grammar.json  node-types.json  parser.c
epics-cmd/test/corpus/: redirects.txt  with-parens.txt  without-parens.txt
epics-db/: binding.gyp  grammar.js  test.dbd
epics-db/queries/: highlights.scm
epics-db/src/: grammar.json  node-types.json  parser.c
epics-msi/: Cargo.toml  grammar.js
epics-msi-substitution/: Cargo.toml  grammar.js
epics-msi-substitution/src/: grammar.json  node-types.json  parser.c
epics-msi-template/: Cargo.toml  binding.gyp  grammar.js
epics-msi-template/bindings/node/: binding.cc  index.js
epics-msi-template/bindings/rust/: lib.rs
epics-msi-template/queries/: highlights.scm
epics-msi-template/src/: grammar.json  node-types.json  parser.c
epics-msi-template/test/corpus/: databaseDefinition.txt  macros.txt
epics-msi/queries/: highlights.scm
epics-msi/src/: grammar.json  node-types.json  parser.c
snl/: Cargo.toml  binding.gyp  grammar.js
snl/queries/: highlights.scm
snl/src/: grammar.json  node-types.json  parser.c
streamdevice-proto/: Cargo.toml  binding.gyp  grammar.js
streamdevice-proto/bindings/node/: binding.cc  index.js
streamdevice-proto/bindings/rust/: lib.rs
streamdevice-proto/queries/: highlights.scm
streamdevice-proto/src/: grammar.json  node-types.json  parser.c
streamdevice-proto/test/corpus/: example.txt  format-converter.txt  strings.txt  variables.txt
tree-sitter-epics-db/: grammar.js  package.json
tree-sitter-epics-db/queries/: highlights.scm
tree-sitter-epics-db/src/: node-types.json  (+1 more)
(+16 files in other folders)
